remove javax.xml.bind dependency